--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "npm i -g commitzen"
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.1.6",
