--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "husky": "^8.0.1",
     "typescript": "4.6.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
