--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
